<resources>
    <string name="app_name">ApocMobile</string>
    <string name="world_button_text">Worlds</string>
    <string name="create_world_button_text">Create A World</string>
    <string name="edit_world_button_text">Edit Worlds</string>
    <string name="generic_back">Back</string>
    <string name="create_world_name_startertext">World Name</string>
    <string name="locations">Locations</string>
    <string name="characters">Characters</string>
    <string name="races">Races</string>
    <string name="creatures">Creatures</string>
    <string name="landmarks">Landmarks</string>
    <string name="edit_world_name_startertext">Error!</string>
    <string name="create_location_button_text">Create Location</string>
    <string name="edit_location_button_text">Edit Locations</string>
    <string name="create_location_name_startertext">Location Name</string>
    <string name="create_landmark_button_text">Create Landmark</string>
    <string name="edit_landmark_button_text">Edit Landmarks</string>
    <string name="edit_character_button_text">Edit Characters</string>
    <string name="create_character_button_text">Create Character</string>
    <string name="landmark_name">Landmark Name</string>
    <string name="bio">Bio</string>
    <string name="population">Population</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="world">World</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="select_portrait">Select Portrait</string>
    <string name="character_name">Character Name</string>
    <string name="bio">Bio</string>
    <string name="race">Race</string>
    <string name="world">World</string>
    <string name="edit_this_character">Edit This Character</string>
    <string name="delete_character">Delete Character</string>
    <string name="back">Back</string>
    <string name="landmark_name">Landmark Name</string>
    <string name="bio">Bio</string>
    <string name="population">Population</string>
    <string name="location">Location</string>
    <string name="edit_this_landmark">Edit This Landmark</string>
    <string name="delete_landmark">Delete Landmark</string>
    <string name="back">Back</string>
    <string name="bio">Bio</string>
    <string name="world">World</string>
    <string name="confirm_edit_location">Confirm Edit location</string>
    <string name="delete_this_location">Delete This Location</string>
    <string name="back">Back</string>
    <string name="confirm_edit_world">Confirm Edit World</string>
    <string name="delete_this_world">Delete This World</string>
    <string name="back">Back</string>
    <string name="delete_everything">Delete Everything</string>
</resources>