<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.landmark.BaseLandmarkActivity">

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/createlandmarkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_landmark_button_text" />

        <Button
            android:id="@+id/editlandmarksButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_landmark_button_text" />

        <Button
            android:id="@+id/landmarksBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generic_back" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>