<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="325dp"
        android:layout_height="469dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/goToWorldsActivityButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/world_button_text" />

        <Button
            android:id="@+id/goToLocationsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locations" />

        <Button
            android:id="@+id/goToCharactersActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characters" />

        <Button
            android:id="@+id/goToLandmarksActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landmarks" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/deleteEverythingButton"
            android:layout_width="217dp"
            android:layout_height="57dp"
            android:backgroundTint="#F44336"
            android:text="Delete Everything"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>